<resources>
    <string name="app_name">DigitalHouseFoods</string>
    <string name="imagem_da_splash_screen">imagem da splash screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="password_error">Password must be at least 6 characters</string>
    <string name="name">Name</string>
    <string name="name_error">Enter a valid name</string>
    <string name="passwords_error">Passwords must be the same</string>
    <string name="account_created">Account successfully created</string>
    <string name="repeat_password">Repeat password</string>
    <string name="restaurant_image">restaurant image</string>
    <string name="closes_at">closes at %s</string>
    <string name="main_course">Main course</string>
    <string name="meal_name">"Salada com molho Gengibre"</string>
    <string name="meal_description">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.
</string>
</resources>